# tresor

./: .gitignore  Cargo.toml  README.md
src/: crypto.rs  lib.rs  main.rs  storage.rs  sub_commands.rs
src/crypto/: error.rs  mod.rs
src/storage/: sqlite.rs
tests/: storage.rs
