[package]
name = "tresor"
version = "0.1.0"
authors = ["franza <nico.franza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
aes-gcm = "0.9.1"
base64 = "0.13.0"
rpassword = "5.0"

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]

[dev-dependencies]
serial_test = "*"
